version 3.40 2021-09-02
- added $version_remote link to GitHub changelog.txt in /maintenance/versions/
- enlarged various lightbox popups
- added email to outgoing header redirect from payment.php to pre-populate form_login()
- fixed bug where $GLOBALS['form_hash'] was not set for $_GET['first_submission']
- form_hash() now always sets $GLOBALS['form_hash'] = $_SESSION['csrf_token'] (for both "session" and "validate")
- added isset() check for $_SESSION['csrf_token'] in form_hash()
- moved form_hash('session') calls to form functions
- refactoring of form_hash() to use per-session rather than per-request CSRF tokens
- upgraded to PHPMailer 6.5.1 (2021-08-18)
- added Exception.php to PHPMailer routine
- updated password reset copy
- if phone length > 7 then phone = ''
- added array.map and string.trim in mail_to_link JavaScript routine to avoid line break issues with Tidy
- added check for $_SESSION['form_hash'] in form_hash() to suppress PHP Warning: Undefined array key
- added GitHub link to $contact_sm in /maintenance/versions/
- Submission Manager now on GitHub @ https://github.com/devinemke/submgr (added license.txt + readme.md)
- ran $_SERVER['PHP_SELF'] through htmlentities()
- upgraded to PHPMailer 6.x now that PHP >= 5.5 is required
- removed all checks for PHP_VERSION < 5.5
- minimum PHP version is now 5.5 (updated check_version() function)

version 3.39 2020-11-02
- all popups can now be closed by clicking on background
- added kill_session() before exit_error() in form_hash()
- upgraded to PHPMailer 5.2.28 (2020-03-19)
- refactoring of form_hash() to mitigate CSRF
- added "regenerate" argument to kill_session() to preserve cookie and create new session
- post-installation: invalid config values display error classes for labels/fields in /configuration/general/
- post-installation: re-direct to /configuration/general/ with proper error $notice
- post-installation: "required configuration" error is now a link to /configuration/general/