@@ -1,10 +1,10 @@
 <?php
 $config_db = array(
-'host' => '{host}',
-'username' => '{username}',
-'password' => '{password}',
-'name' => '{name}',
-'port' => '{port}'
+'host' => '[host]',
+'username' => '[username]',
+'password' => '[password]',
+'name' => '[name]',
+'port' => '[port]'
 );
 
 define('INSTALLED', false);
