@@ -96,7 +96,7 @@ a:hover
 <div style="text-align: center;">
 <div style="font-size: 25pt; font-weight: bold;">Submission Manager</div>
 <div style="font-size: 15pt;">System Documentation</div>
-<div style="font-size: 10pt;">updated 2019-09-06<br>&copy;2019 Devin Emke</div>
+<div style="font-size: 10pt;">updated 2021-09-02<br>&copy;2021 Devin Emke</div>
 </div>
 
 <hr>
@@ -292,18 +292,18 @@ a:hover
 <pre>
 &lt;?php
 $config_db = array(
-'host' =&gt; '{host}',
-'username' =&gt; '{username}',
-'password' =&gt; '{password}',
-'name' =&gt; '{name}',
-'port' =&gt; '{port}'
+'host' =&gt; '[host]',
+'username' =&gt; '[username]',
+'password' =&gt; '[password]',
+'name' =&gt; '[name]',
+'port' =&gt; '[port]'
 );
 
 define('INSTALLED', true);
 ?&gt;
 </pre>
 
-		<p>Update the {host}, {username}, {password}, {name}, and {port} to match your mySQL connection parameters. The {name} field is the name of the database where you are storing Submission Manager data. Be sure to use a plain ASCII text editor when editing this file (like Windows Notepad). When you have finished editing the file upload it to your web server in the directory where you installed Submission Manager.</p>
+		<p>Update the [host], [username], [password], [name], and [port] to match your mySQL connection parameters. The [name] field is the name of the database where you are storing Submission Manager data. Be sure to use a plain ASCII text editor when editing this file (like Windows Notepad). When you have finished editing the file upload it to your web server in the directory where you installed Submission Manager.</p>
 	</div>
 
 </div>
