@@ -1,4 +1,5 @@
 version 3.40 2021-09-02
+- changed config_db.php placeholder brackets from curly to square (to be consistent with other placeholders)
 - added $version_remote link to GitHub changelog.txt in /maintenance/versions/
 - enlarged various lightbox popups
 - added email to outgoing header redirect from payment.php to pre-populate form_login()
